# ROS2-Drone-Basic-Course-for-Beginners

./: .gitmodules  README.md
autonomous_drone/: CMakeLists.txt  drone.txt  package.xml
autonomous_drone/launch/: L1_start_simulation.launch  L2_SLAM.launch  L3_localization.launch  L4_PathPlanning.launch  hector_drone.launch  maze_solving.launch  secure_diamond.launch
autonomous_drone/plugins/: bodyNsensors.urdf.xacro  gazebo_sim_controller.urdf.xacro  gazebo_sim_plugins.urdf.xacro
autonomous_drone/resources/: costmap_common_params.yaml  local_costmap_params.yaml
autonomous_drone/scripts/: a_fly_drone.py  b_obstical_avoid.py  c_maze_solving.py  d_secure_the_diamond.py
autonomous_drone/sensors/: generic_camera.urdf.xacro  hokuyo_utm30lx.urdf.xacro  sonar_sensor.urdf.xacro
autonomous_drone/urdf/: drone.urdf  hector_camera_laser.urdf.xacro
autonomous_drone/world/: droning.world
autonomous_drone/worlds/: diamond_securing.world  maze_drone.world
drive_drone/: CMakeLists.txt  package.xml
drive_drone/launch/: p1_a_drone_fly_gazebo_rviz.launch.py  p1_b_tb3_drone_gazebo.launch.py  p2_go_to_goal.launch.py
drive_drone/src/: p1_a_drive_node.cpp  p1_b_tb3_follower.cpp  p2_go_to_goal.cpp
drone_basic/: CMakeLists.txt  package.xml
drone_basic/launch/: bring_hector_drone.launch  drone_maze.launch  secure_the_diamond.launch
drone_basic/sensors/: generic_camera.urdf.xacro  hokuyo_utm30lx.urdf.xacro  sonar_sensor.urdf.xacro
drone_basic/src/: fly_drone.py  maze_solving.py  obstacle_avoiding.py  secure_diamond.py
drone_basic/urdf/: hector_camera_laser.urdf.xacro  (+1 more)
(+5 files in other folders)
